database and OOP code updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ python-dotenv==1.0.0
 tiktoken==0.4.0
 chromadb==0.4.9
 openai==0.28.0
+boto3==1.28.68
+botocore==1.31.68
+aiosqlite @ file:///croot/aiosqlite_1683773899903/work
+sqlparse==0.4.4
