--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,8 @@ chromadb==0.4.9
 openai==0.28.0
 boto3==1.28.68
 botocore==1.31.68
-aiosqlite @ file:///croot/aiosqlite_1683773899903/work
+#aiosqlite @ file:///croot/aiosqlite_1683773899903/work
 sqlparse==0.4.4
+pydub==0.25.1
+moviepy==1.0.3
+whisper
