updated with online whisper

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 WhisperService:
-  mode: offline
+  mode: online
   online:
     api_endpoint: https://api.whisper-service.com
     api_key: YOUR_API_KEY
